// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates a styled component with theme 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "backgroundColor": "white",
      "color": "black",
      "padding": 20,
    }
  }
  theme={
    Object {
      "backgroundColor": "white",
      "color": "black",
    }
  }
/>
`;

exports[`creates a styled component with theme 2`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "backgroundColor": "black",
      "color": "white",
      "padding": 20,
    }
  }
  theme={
    Object {
      "backgroundColor": "black",
      "color": "white",
    }
  }
/>
`;
